# V1T

./: .gitignore  CITATION.bib  LICENSE  README.md  conda-environment.yaml  demo.ipynb  ensemble.py  pretrain.py  pyproject.toml  requirements.txt  seeds.py  setup.py  setup.sh  submission.py  sweep.py  sweep_vit.yaml  train.py  tuner.py  wandb_agent.py
data/: .gitignore  README.md  info.yaml
misc/: .gitignore  attention_map_visualization.ipynb  behaviorMLP_visualization.py  behavior_visualization.py  center_of_attention_maps.py  compare_attention_rollout.py  compute_center_of_attention.py  core_pca.py  core_visualization.py  data_visualization.ipynb  data_visualization.py  estimate_aRFs.py  estimate_receptive_fields.py  extract_attention_maps.py  franke2022_visualization.ipynb  limit_data.ipynb  location_dependency.py  main_figure.ipynb  plot_RFs.ipynb  plot_aRFs.ipynb  prediction_v_dilation.py  pretrain.py  progress_visualization.ipynb  pupil_dilation_correlations.py  readout_inspection.ipynb  readout_visualization.ipynb  self_attention_visualization.py  test_submission.py  visualize_lurz2020.py  vit_visualization.ipynb  vit_visualization.py  yaml2csv.py
sensorium/: __init__.py
sensorium/data/: __init__.py  data.py  dataset.py
sensorium/utils/: utils.py
src/sensorium/: data.py  losses.py  metrics.py
src/sensorium/data/: __init__.py  data.py
src/sensorium/models/: __init__.py  baseline.py  core_shifter.py  cropper.py  image_cropper.py  linear.py  model.py  random.py  registry.py  shifter.py  utils.py
src/sensorium/models/core/: __init__.py  cct.py  conv.py  core.py  linear.py  mixer.py  random.py  stacked2d.py  stn.py  utils.py  vit.py
src/sensorium/models/neuralpredictors/: README.md  activations.py  conv.py  core.py  encoder.py  hermite.py  (+3 more)
src/sensorium/pretrain/: classification.py  data.py  reconstruction.py
src/sensorium/utils/: checkpoint.py  logger.py  metrics.py  scheduler.py  tensorboard.py  utils.py  yaml.py
src/v1t/: data.py  losses.py  metrics.py
src/v1t/fitgabor/: __init__.py  gabor_gen.py  trainer.py  utils.py
src/v1t/models/: __init__.py  core_shifter.py  image_cropper.py  model.py  utils.py
src/v1t/pretrain/: __init__.py  classification.py  data.py  reconstruction.py
src/v1t/utils/: attention_rollout.py  tensorboard.py  utils.py  yaml.py
sweep/: sweep.yaml
sweep_configs/: sweep_vit.yaml
(+22 files in other folders)
