[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sensorium"
version = "0.0.1"
authors = [
  { name="Bryan M. Li", email="bryan.li@ed.ac.uk" },
]
description = "Codebase for NeurIPS 2022 Sensorium challenge"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bryanlimy/sensorium2022"
"Bug Tracker" = "https://github.com/bryanlimy/sensorium2022/issues"