[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "v1t"
version = "0.0.1"
authors = [
  { name="Bryan M. Li", email="bryan.li@ed.ac.uk" },
]
description = "Codebase for V1T: large-scale mouse V1 response prediction using a Vision Transformer"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bryanlimy/v1t"
"Bug Tracker" = "https://github.com/bryanlimy/v1t/issues"
