[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v1t"
version = "1.0"
authors = [
  { name="Bryan M. Li", email="bryan.li@ed.ac.uk" },
]
description = "Codebase for V1T: large-scale mouse V1 response prediction using a Vision Transformer"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "transformer",
    "neuro-ai",
    "sensorium2022",
    "visual-response-prediction",
    "sensorium",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
"Homepage" = "https://github.com/bryanlimy/v1t"
"Bug Tracker" = "https://github.com/bryanlimy/v1t/issues"
